fixed text wrapping issues on community members and person name bolder

--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -180,7 +180,7 @@ a#global-logo{padding-left:35px;}
 .profilesWrapper .photoProfile p span{display:block;}
 .profilesWrapper .photoProfileEndRow{margin-right:0;}
 .profilesWrapper .photoProfileImage{float:left;display:inline;margin:10px;height:100px;width:75px;}.profilesWrapper .photoProfileImage img{border:none;-ms-interpolation-mode:bicubic;}
-.profilesWrapper .profileInfoBox{float:left;margin:1em 0 0.2em;line-height:1.5em;overflow:hidden;width:118px;}
+.profilesWrapper .profileInfoBox{float:left;margin:0.5em;line-height:1.5em;overflow:hidden;}
 .profilesWrapper .profileNoWrap{white-space:nowrap;}
 .profilesWrapper a.rightFloatLink{float:right;text-decoration:none;}
 .profilesWrapper .visual-clear{clear:both;}
